--- a/site-pageobject/pom.xml
+++ b/site-pageobject/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>selenium-support</artifactId>
             <version>4.1.4</version>
         </dependency>
+        <dependency>
+            <groupId>one.util</groupId>
+            <artifactId>streamex</artifactId>
+            <version>0.8.1</version>
+        </dependency>
     </dependencies>
 
 </project>
